Fri Nov 18 15:34:35 1994  Theodore Y. Ts'o  (tytso@dcl)

	* ktf_util.c (krb5_ktfileint_internal_read_entry): Add magic
		numbers for keytab, principal, and keyblock.

Wed Oct 26 14:41:31 1994    (tytso@rsx-11)

	* ktf_get_en.c (krb5_ktfile_get_entry): If the requested kvno is
		IGNORE_KVNO, fix the error return so that 0 (no error) is
		returned instead of KTF_NOT_FOUND.

Thu Oct 13 17:26:12 1994  Theodore Y. Ts'o  (tytso@maytag)

	* configure.in: Add ISODE_DEFS

Tue Oct  4 16:20:48 1994  Theodore Y. Ts'o  (tytso@dcl)

	* ktf_get_en.c (krb5_ktfile_get_entry): Fix to compare using
		new_entry instead of cur_entry.  (Bug made in modification
		on Sep 28th).  Don't free cur_entry twice on errors.

        * ktfile.h
	* ktf_wreslv.c (krb5_ktfile_wresolve):
	* ktf_resolv.c (krb5_ktf_resolv): Resolv's first argument is now a
		const char *.

Fri Sep 30 21:56:02 1994  Theodore Y. Ts'o  (tytso@dcl)

	* ktf_ops.c (krb5_ktf_ops): 
	  ktf_wops.c (krb5_ktf_writable_ops):
	  ktf_defops.c (krb5_kt_dfl_ops): Add placeholder for magic number.

Wed Sep 28 21:14:49 1994  Theodore Y. Ts'o  (tytso@dcl)

	* ktf_get_en.c (krb5_ktfile_get_entry): Modified to return the
		most recent key (with the greatest kvno), instead of the
		first.

Thu Sep 22 21:51:53 1994  Theodore Y. Ts'o  (tytso@dcl)
    
    	* ktf_get_en.c (krb5_ktfile_get_entry):
	* ktf_next.c (krb5_ktfile_get_next):
	* ktf_remove.c (krb5_ktfile_remove):
	* ktf_util.c (krb5_ktfileint_read_entry,
		krb5_ktfileint_internal_read_entry):
	* ktfile.h: Change the interface of krb5_ktfile_read_entry and
		krb5_ktfile_internal_read_entry so that they don't
		allocate memory for the top-level structure.  All of their
		callers didn't need it and were freeing it anyway.
		

	* ktf_remove.c (krb5_ktfile_remove): Fix memory leak caused by not
		freeing the top-level structure.

Wed Sep 14 21:56:15 1994  Theodore Y. Ts'o  (tytso@dcl)

	* ktf_util.c (krb5_ktfileint_delete_entry):  Fixed bug reported by